# personal-blog-api

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
app/core/: config.py
migrations/: env.py
migrations/versions/: eb3457dcd52e_init.py
src/app/: main.py
src/app/api/admin/: auth.py  notes.py  project_posts.py  projects.py  router.py
src/app/api/v1/: health.py  notes.py  project_post.py  projects.py  router.py
src/app/core/: database.py  deps.py  security.py
src/app/models/: __init__.py  note.py  project.py  project_post.py  tag.py  user.py
src/app/schemas/: common.py  note.py  project.py  project_post.py  tag.py  user.py
src/app/services/: auth.py  notes.py  project_posts.py  projects.py
